--- a/ElasticSearch/appsettings.json
+++ b/ElasticSearch/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ElasticSearch": {
+    "Url": "http://localhost:9200",
+    "DefaultIndex": "users",
+    "UserName": "",
+    "Password": ""
+  }
 }
